# daemon

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  render.js  simple-daemon.js
component-renderer/: package-lock.json
component-renderer/src/: App.js
component-system/: package-lock.json  package.json
component-system/daemon/: Dockerfile  package.json
component-system/daemon/rust/component-daemon/: Cargo.toml  Dockerfile
component-system/daemon/rust/component-daemon/src/: main.rs
component-system/registry/: simple-registry.js
component-system/renderer/frontend/: Dockerfile
component-system/renderer/frontend/src/: App.js
component-system/renderer/html/: Dockerfile
frontend/: package.json
frontend/src/: App.css  index.css  index.js
renderer/: index.html
rust/component-daemon/src/: main.rs
