[package]
name = "component-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-graphql = { version = "5.0", features = ["chrono", "uuid"] }
async-graphql-warp = "5.0"
warp = "0.3"
url = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dashmap = "5.5"
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"